# robotprogramming_2025_26_win

./: README.md
exercises/rp_01_compilers_and_build_systems/: CMakeLists.txt
exercises/rp_01_compilers_and_build_systems/executables/: CMakeLists.txt
exercises/rp_01_compilers_and_build_systems/src/: CMakeLists.txt
exercises/rp_01_compilers_and_build_systems/src/utils/: property_container_manager.cpp
exercises/rp_02_cpp_intro/: CMakeLists.txt
exercises/rp_02_cpp_intro/src/: CMakeLists.txt
exercises/rp_02_cpp_intro/src/btree/: btree.cpp
exercises/rp_02_cpp_intro/src/linalg/: mat_f.cpp  vec_f.cpp  vec_f.h
exercises/rp_04_dmap/rviz_configs/: diag_single_robot_dmap.rviz
exercises/rp_04_dmap/src/rp_commons/include/rp_commons/: distance_map_utils.h
exercises/rp_04_dmap/src/rp_commons/src/: test_distance_map_node.cpp
solutions/rp_01_compilers_and_build_systems/: CMakeLists.txt
solutions/rp_01_compilers_and_build_systems/executables/: CMakeLists.txt  many_object_in_stack_example.cpp
solutions/rp_01_compilers_and_build_systems/src/: CMakeLists.txt
solutions/rp_01_compilers_and_build_systems/src/data_structures/: matrix.h  matrix.hpp
solutions/rp_01_compilers_and_build_systems/src/messages/: base_sensor_message.cpp
solutions/rp_01_compilers_and_build_systems/src/utils/: blob.h  deserializer.cpp  identifiable.h  object_data.cpp  object_data.h  property_eigen.cpp  property_vector.h  serialization_context.cpp  serializer.cpp  serializer.h
solutions/rp_02_cpp_intro/src/btree/: btree.cpp  btree.h  btree_test.cpp
solutions/rp_02_cpp_intro/src/linalg/: mat_f.cpp  mat_f.h  mat_f_test.cpp  vec_f.cpp  vec_f.h
solutions/rp_03_ros_basics/: Readme.md
solutions/rp_03_ros_basics/src/rp_simple_controller/: CMakeLists.txt  package.xml
solutions/rp_03_ros_basics/src/rp_simple_controller/src/: turtle_square.cpp
solutions/rp_04_dmap/: README.md
solutions/rp_04_dmap/rviz_configs/: diag_single_robot_dmap.rviz
solutions/rp_04_dmap/src/rp_commons/include/rp_commons/: distance_map_utils.h
solutions/rp_04_dmap/src/rp_commons/src/: test_distance_map_node.cpp
source/rp_01_compilers_and_build_systems/01_building_a_cpp_program/: hello_world.cpp  other_file.cpp  other_file.h
source/rp_01_compilers_and_build_systems/02_so_game/: surface.h
source/rp_02_cpp_intro/: 01_references.cpp  02_structs_with_methods.cpp  03_constructors.cpp  04_vec_f.cpp  Makefile  in_class.cpp
source/rp_02b_cpp_inheritance/examples/: 04_inheritance.cpp  07_late_binding.cpp
source/rp_02b_cpp_inheritance/in_class/: CMakeLists.txt  WHAT_I_DID.txt  canvas.cpp  canvas.h  differential_drive_robot.cpp  differential_drive_robot.h  grid.cpp  grid.h  grid_map.cpp  grid_map.h  lidar.cpp  lidar.h  linalg.h  rp_sim.cpp  sim_in_class.cpp  world.cpp  world.h
source/rp_02b_cpp_inheritance/simple_simulator/src/: #world.cpp#  canvas.h  lidar.cpp  lidar.h  robot.cpp  robot.h  simple_geometry.h  simple_simulator_test.cpp  world.cpp  world.h
source/rp_03_metaprogramming/: CMakeLists.txt  eigenexample.cpp  list_example.cpp  sort_1.cpp  sort_2.cpp  sort_3.cpp  stl_list.cpp  stl_map.cpp  stl_vector.cpp  vec_read_example.cpp
source/rp_07_dmap/: Makefile  dmap_simple.cpp  dmap_simple.h  dmap_simple_impl.cpp  dmap_simple_test.cpp  grid_.h
source/rp_07_dmap/in_class/: dmap.cpp  grid.cpp  grid.h
source/rp_08_dmap_localization/: CMakeLists.txt  display_utils.h  dmap_localizer.h  grid.h  grid_mapping.h
source/rp_09_dmap_planner/: CMakeLists.txt  dmap.cpp  dmap_planner.cpp  dmap_planner.h  dmap_planner_test.cpp  grid_mapping.h
source/rp_10_cuda_experiments/: CMakeLists.txt  cuda_common.h  dmap.h  dmap_localizer.cpp  dmap_localizer_exercise.cpp  dmap_localizer_test.cpp  grid.cu  grid.cuh  reduce_.h  reduce_impl.cuh  simple_cuda.cu
