<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rp_simple_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="giacomini@diag.uniroma1.it">rvp-00</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- Add the package dependencies down here -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>
  <!-- PostFix 1: For ROLLING users, the package is -->
  <!-- <depend>turtlesim_msgs</depend> -->
  <!-- but not after this line -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
